Updated get parameter to search.controller
