# build/swagger.json
@@ -39,22 +39,21 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Product": {
+			"Pick_Product.Exclude_keyofProduct.unit_price__": {
 				"properties": {
 					"name": {
 						"type": "string"
-					},
-					"unit_price": {
-						"type": "number",
-						"format": "double"
 					}
 				},
 				"required": [
-					"name",
-					"unit_price"
+					"name"
 				],
 				"type": "object",
-				"additionalProperties": false
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Product.unit_price_": {
+				"$ref": "#/components/schemas/Pick_Product.Exclude_keyofProduct.unit_price__",
+				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"PurchaseRequest": {
 				"properties": {
@@ -63,7 +62,7 @@
 					},
 					"products": {
 						"items": {
-							"$ref": "#/components/schemas/Product"
+							"$ref": "#/components/schemas/Omit_Product.unit_price_"
 						},
 						"type": "array"
 					}
@@ -213,6 +212,34 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/search/{name}": {
+			"get": {
+				"operationId": "SearchCustomerOrProductByName",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "name",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
